# material-web-bindings

./: .gitignore  .taplo.toml  Cargo.toml  Makefile.toml  README.md  package-lock.json  package.json
bindings/: Cargo.toml
bindings/src/: lib.rs  tabs.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs  tabs.rs
examples/client/web/: material_web.index.js
examples/client/web/static/: index.html  style.css
examples/client/web/static/fonts/: materialsymbolsoutlined.css
examples/server/: Cargo.toml
examples/server/src/: main.rs
