[package]
name = "material-web-bindings"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/material-web-bindings"
description = "The Material Design Web Components bindings for the Rust"
keywords = ["material", "web", "ui", "bindings"]
categories = ["web-programming", "wasm", "gui"]

[dependencies]
const_format = "0.2"
gloo = "0.11"
gloo-console = "0.3"
itertools = "0.13"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-dom = "1.0"
web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "AnimationEvent",
    "BinaryType",
    "Blob",
    "BlobPropertyBag",
    "console",
    "CustomEvent",
    "DedicatedWorkerGlobalScope",
    "Document",
    "DomTokenList",
    "DragEvent",
    "Element",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "FocusEvent",
    "Headers",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "Node",
    "ObserverCallback",
    "PointerEvent",
    "ProgressEvent",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Storage",
    "Text",
    "TouchEvent",
    "TransitionEvent",
    "UiEvent",
    "Url",
    "WebSocket",
    "WheelEvent",
    "Window",
    "Worker",
    "WorkerGlobalScope",
    "WorkerOptions",
] }
