[package]
name = "server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/material-web-bindings"
description = "The Material Design Web Components bindings example server"

[dependencies]
env_logger = "0.11"
tiny_file_server = "0.1"
